I don't commit often enough

--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -1,8 +1,31 @@
 
 <div class="index">
   <div class="movies-main grid-55">
-    <div class="week-container">
+    <div class="week-container this-week">
       <h2 class="list-label">THIS WEEK</h2>
+      <ul class="poster-list">
+        <li class="screening">
+          <h3 class="venue"></h3>
+          <img class="poster main_page" />
+          <span class="datetime"></span>
+        </li>
+      </ul>
+    </div>
+
+    <div class="week-container next-week">
+      <h2 class="list-label">NEXT WEEK</h2>
+      <ul class="poster-list">
+        <li class="screening">
+          <h3 class="venue"></h3>
+          <img class="poster main_page" />
+          <span class="datetime"></span>
+        </li>
+      </ul>
+    </div>
+
+
+    <div class="week-container coming-soon">
+      <h2 class="list-label">COMING SOON</h2>
       <ul class="poster-list">
         <li class="screening">
           <h3 class="venue"></h3>
