Can add screning with no movies

--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Midnight Movies Minneapolis</title>
-    <link rel="stylesheet" href="stylesheets/normalize.css">
-    <link rel="stylesheet" href="stylesheets/mmm.css">
-    <link rel="stylesheet" href="stylesheets/unsemantic-grid-responsive.css">
+  <link rel="stylesheet" href="/stylesheets/normalize.css">
+  <link rel="stylesheet" href="/stylesheets/mmm.css">
+  <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
     <link rel="icon"
       type="image/png"
       href="public/favicon.png">
@@ -17,9 +17,9 @@
       </header>
 
       <nav class="grid-100">
-        <li>Home</li>
-        <li>About</li>
-        <li>All Screenings</li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/screenings/">All Screenings</a></li>
       </nav>
 
       <main>
