--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -1,36 +1,15 @@
 
 <div class="index">
   <div class="movies-main grid-55">
-    <div class="week-container this-week">
-      <h2 class="list-label">THIS WEEK</h2>
+    <div class="week-container">
+      <h2 class="list-label">LOREM IPSUM</h2>
       <ul class="poster-list">
         <li class="screening">
           <h3 class="venue"></h3>
-          <img class="poster main_page" />
-          <span class="datetime"></span>
-        </li>
-      </ul>
-    </div>
-
-    <div class="week-container next-week">
-      <h2 class="list-label">NEXT WEEK</h2>
-      <ul class="poster-list">
-        <li class="screening">
-          <h3 class="venue"></h3>
-          <img class="poster main_page" />
-          <span class="datetime"></span>
-        </li>
-      </ul>
-    </div>
-
-
-    <div class="week-container coming-soon">
-      <h2 class="list-label">COMING SOON</h2>
-      <ul class="poster-list">
-        <li class="screening">
-          <h3 class="venue"></h3>
-          <img class="poster main_page" />
-          <span class="datetime"></span>
+          <a href="">
+            <img class="poster main_page" />
+            <span class="datetime"></span>
+          </a>
         </li>
       </ul>
     </div>
@@ -39,5 +18,15 @@
 
   <div class="meta main grid-40 prefix-5">
     <a class="twitter-timeline" href="https://twitter.com/MidniteMoviesTC" data-widget-id="365201604443521024">Tweets by @MidniteMoviesTC</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
   </div>
+</div>
+
+
+<div class="about">
+   <article>
+      <h2>Hello and welcome!</h2>
+      <p>About three years ago, I discovered midnight movies. It started at the Heights Theater in Columbia Heights, seeing classic British Noir films in the oldest continuously-operating theater in the Twin Cities. Then the now-abandoned Movie Hole at the Proud St Anthony Main, and finally the Uptown.</p>
+    </article>
 </div>
