So much has changed; I need to commit more often

--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Midnight Movies Minneapolis</title>
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
-  <link rel="stylesheet" href="/stylesheets/mmm.css">
-  <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
+  <head>
+    <meta charset="utf-8">
+    <title>Midnight Movies Minneapolis</title>
+    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/mmm.css">
+    <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
     <link rel="icon"
       type="image/png"
       href="public/favicon.png">
-</head>
+  </head>
   <body>
     <div  class="grid-container">
       <header>
@@ -33,5 +33,6 @@
     </div>
 
 
+    <script type="text/javascript" src="/scripts/main.js"></script>
   </body>
 </html>
