--- a/resources/public/html/movie.html
+++ b/resources/public/html/movie.html
@@ -1,4 +1,4 @@
-<div class="add-movie inner-form">
+<div class="add movie inner-form">
   <form action="/movies/add" method="post">
     <div class="film">
       <label for="name">Title:</label>
