--- a/resources/public/html/presenters.html
+++ b/resources/public/html/presenters.html
@@ -1,4 +1,4 @@
-<div class="add-presenter inner-form">
+<div class="add presenter inner-form">
   <form action="/presenters/add" method="post">
     <div class="film">
       <label for="name">Name:</label>
