--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -1,4 +1,4 @@
-<div class="add-venue inner-form">
+<div class="add venue inner-form">
   <form action="/venue/add" method="post">
     <div class="film">
       <label for="name">Name:</label>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="button">
-      <button type="submit" class="add-venue">Add Presenters</button>
+      <button type="submit" class="add-venue">Add Venue</button>
     </div>
   </form>
 </div>
