Take out the SECRET INFO :O

--- a/resources/public/html/movie.html
+++ b/resources/public/html/movie.html
@@ -27,5 +27,20 @@
     <div class="button">
       <button type="submit" class="add-movie">Add Movie</button>
     </div>
+    <span class="remove">Cancel</span>
+  </form>
+</div>
+
+
+<div class="add poster inner-form">
+  <form action="/movies/add-poster" method="post" enctype="multipart/form-data">
+    <div class="poster">
+      <label for="name">Poster Upload:</label>
+      <input type="file" name="poster"/>
+    </div>
+
+    <div class="button">
+      <button type="submit" class="add-movie">Add Poster</button>
+    </div>
   </form>
 </div>
