--- a/resources/public/html/series.html
+++ b/resources/public/html/series.html
@@ -1,6 +1,6 @@
-<div class="add-series inner-form">
+<div class="add series inner-form">
   <form action="/series/add" method="post">
-    <div class="film">
+    <div class="series">
       <label for="name">Name:</label>
       <input name="name"/>
       <label for="name">Website:</label>
@@ -10,7 +10,48 @@
     </div>
 
     <div class="button">
-      <button type="submit" class="add-series">Add Presenters</button>
+      <button type="submit" class="add-series">Add Series</button>
     </div>
+    <span class="remove">Cancel</span>
   </form>
+</div>
+
+<div class="view">
+  <div class="series-details grid-50">
+    <h2 class="name"></h2>
+    <p class="website"></p>
+    <p class="description"></p>
+  </div>
+
+  <div class="meta details grid-50">
+    <h2>Upcoming Screenings</h2>
+    <table>
+      <tr>
+        <th>Movie(s)</th>
+        <th>Date(s)</th>
+        <th>Price</th>
+        <th>Presenter</th>
+        <th>Program</th>
+      </tr>
+      <tr class="screening">
+        <td class="screening">
+          <p class="screening">
+            <a class="screening" href="">
+              <span class="movie"></span>
+            </a>
+          </p>
+        </td>
+        <td class="showtimes"><p></p>
+        </td>
+        <td class="price">
+        </td>
+        <td class="presenters">
+          <br/>
+        </td>
+        <td class="series event">
+          <br/>
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
