Fuck yeah motherfucker

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -130,8 +130,7 @@
       <label for="name">Showtimes:</label>
       <span class="duplicate">Add Showtime</span>
       <div class="singleItem">
-        <input name="date"/>
-        <input name="time"/>
+        <input name="showtime"/>
         <span class="remove">-</span>
       </div>
     </div>
