--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -77,7 +77,7 @@
 
 
 <div class="add screening">
-  <form action="/screenings/add" method="post">
+  <form method="post">
     <div class="film">
       <label for="name">Film(s):</label>
       <span class="add movie">Add Movie to Database</span>
