--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="meta details grid-65">
-    <h2>Upcoming Screenings</h2>
+    <h2>Upcoming Shows</h2>
     <table>
       <tr>
         <th>Movie(s)</th>
