Update venuesgit status

--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -2,15 +2,15 @@
   <form action="/venue/add" method="post">
     <div class="venue">
       <label for="name">Name:</label>
-      <input name="name"/>
+      <input class="name" name="name"/>
       <label for="name">Address:</label>
-      <input name="address"/>
+      <input class="address" name="address"/>
       <label for="name">Website:</label>
-      <input name="website"/>
+      <input class="website" name="website"/>
       <label for="name">Phone Number:</label>
-      <input name="phone-number"/>
+      <input class="phone-number" name="phone-number"/>
       <label>Description:</label>
-      <textarea name="description"></textarea>
+      <textarea class="description" name="description"></textarea>
     </div>
 
     <div class="button">
