--- a/resources/public/html/series.html
+++ b/resources/public/html/series.html
@@ -1,3 +1,11 @@
+<div class="all">
+    <ul>
+        <li><a></a></li>
+    </ul>
+</div>
+
+
+
 <div class="add series inner-form">
   <form action="/series/add" method="post">
     <div class="series">
