--- a/resources/public/html/movie.html
+++ b/resources/public/html/movie.html
@@ -2,15 +2,15 @@
   <form action="/movies/add" method="post">
     <div class="film">
       <label for="name">Title:</label>
-      <input name="title"/>
+      <input class="title" name="title"/>
       <label for="name">Director:</label>
-      <input name="director"/>
+      <input class="director" name="director"/>
       <label for="name">Year:</label>
-      <input name="releaseYear"/>
+      <input class="release-year" name="year"/>
       <label for="name">Running Time:</label>
-      <input name="runningTime"/>
+      <input class="running-time" name="runningTime"/>
       <label>MPAA Rating:</label>
-      <select class="mpaa" name="mpaa">
+      <select class="mpaa" name="mpaa-rating">
         <option value="G" class="mpaa">G</option>
         <option value="PG" class="mpaa">PG</option>
         <option value="PG-13" class="mpaa">PG-13</option>
@@ -19,9 +19,9 @@
         <option value="NC-17" class="mpaa">NC-17</option>
         <option value="NR" class="mpaa">NR</option>
       </select>
-      <input name="poster" value="default"/>
+      <input class="poster" name="poster" value="default"/>
       <label>Description:</label>
-      <textarea name="description"></textarea>
+      <textarea class="description" name="description"></textarea>
     </div>
 
     <div class="button">
@@ -29,6 +29,12 @@
     </div>
     <span class="remove">Cancel</span>
   </form>
+</div>
+
+<div class="all">
+    <ul>
+        <li><a></a></li>
+    </ul>
 </div>
 
 
