--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -1,64 +1,71 @@
-<div class="add venue inner-form">
-  <form action="/venue/add" method="post">
-    <div class="venue">
-      <label for="name">Name:</label>
-      <input class="name" name="name"/>
-      <label for="name">Address:</label>
-      <input class="address" name="address"/>
-      <label for="name">Website:</label>
-      <input class="website" name="website"/>
-      <label for="name">Phone Number:</label>
-      <input class="phone-number" name="phone-number"/>
-      <label>Description:</label>
-      <textarea class="description" name="description"></textarea>
-    </div>
+<div class="all">
+    <ul>
+        <li><a></a></li>
+    </ul>
+</div>
 
-    <div class="button">
-      <button type="submit" class="add-venue">Add Venue</button>
-    </div>
-    <span class="remove">Cancel</span>
-  </form>
+
+<div class="add venue inner-form">
+    <form action="/venue/add" method="post">
+        <div class="venue">
+            <label for="name">Name:</label>
+            <input class="name" name="name"/>
+            <label for="name">Address:</label>
+            <input class="address" name="address"/>
+            <label for="name">Website:</label>
+            <input class="website" name="website"/>
+            <label for="name">Phone Number:</label>
+            <input class="phone-number" name="phone-number"/>
+            <label>Description:</label>
+            <textarea class="description" name="description"></textarea>
+        </div>
+
+        <div class="button">
+            <button type="submit" class="add-venue">Add Venue</button>
+        </div>
+        <span class="remove">Cancel</span>
+    </form>
 </div>
 
 <div class="view">
-  <div class="venue-details grid-35">
-    <h2 class="name"></h2>
-    <p class="website"></p>
-    <p class="phone-number"></p>
-    <p class="description"></p>
-    <p class="address"> </p>
-    <div class="address"></div>
-  </div>
+    <div class="venue-details grid-35">
+        <h2 class="name"></h2>
+        <p class="website"></p>
+        <p class="phone-number"></p>
+        <p class="description"></p>
+        <p class="address"> </p>
+        <div class="address"></div>
+    </div>
 
-  <div class="meta details grid-65">
-    <h2>Upcoming Shows</h2>
-    <table>
-      <tr>
-        <th>Movie(s)</th>
-        <th>Date(s)</th>
-        <th>Price</th>
-        <th>Presenter</th>
-        <th>Program</th>
-      </tr>
-      <tr class="screening">
-        <td class="screening">
-          <p class="screening">
-            <a class="screening" href="">
-              <span class="movie"></span>
-            </a>
-          </p>
-        </td>
-        <td class="showtimes"><p></p>
-        </td>
-        <td class="price">
-        </td>
-        <td class="presenters">
-          <br/>
-        </td>
-        <td class="series event">
-          <br/>
-        </td>
-      </tr>
-    </table>
-  </div>
+    <div class="meta details grid-65">
+        <h2>Upcoming Shows</h2>
+        <table>
+            <tr>
+                <th>Movie(s)</th>
+                <th>Date(s)</th>
+                <th>Price</th>
+                <th>Presenter</th>
+                <th>Program</th>
+            </tr>
+            <tr class="screening">
+                <td class="screening">
+                    <p class="screening">
+                        <a class="screening" href="">
+                            <span class="movie"></span>
+                        </a>
+                    </p>
+                </td>
+                <td class="showtimes"><p></p>
+                </td>
+                <td class="price">
+                </td>
+                <td class="presenters">
+                    <p><a></a></p>
+                </td>
+                <td class="series event">
+                    <p><a></a></p>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
