--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -1,9 +1,9 @@
-<div class="view">
+  <div class="view">
     <div class="movie-details grid-50">
         <h2><span class="title"></span></h2>
         <section class="movie">
             <img class="poster"/>
-            <p class="release"></p>
+            <p= class="release"></p>
             <p class="director"></p>
             <p class="rating"></p>
             <p class="runningTime"> minutes</p>
@@ -31,12 +31,12 @@
 <div class="all">
     <table>
         <tr>
-            <th>Screening</th>
-            <th>Venue</th>
-            <th>Date(s)</th>
-            <th>Price</th>
-            <th>Presenter</th>
-            <th>Program</th>
+            <th class="screening">Screening</th>
+            <th class="venue">Venue</th>
+            <th class="showtime">Date(s)</th>
+            <th class="price">Price</th>
+            <th class="presenter">Presenter</th>
+            <th class="program">Program</th>
         </tr>
         <tr class="screening">
             <td class="screening">
