--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -23,6 +23,7 @@
         <div class="button">
             <button type="submit" class="add-venue">Add Venue</button>
         </div>
+        <a class="delete">Delete</a>
         <span class="remove">Cancel</span>
     </form>
 </div>
@@ -39,33 +40,6 @@
 
     <div class="meta details grid-65">
         <h2>Upcoming Shows</h2>
-        <table>
-            <tr>
-                <th>Movie(s)</th>
-                <th>Date(s)</th>
-                <th>Price</th>
-                <th>Presenter</th>
-                <th>Program</th>
-            </tr>
-            <tr class="screening">
-                <td class="screening">
-                    <p class="screening">
-                        <a class="screening" href="">
-                            <span class="movie"></span>
-                        </a>
-                    </p>
-                </td>
-                <td class="showtimes"><p></p>
-                </td>
-                <td class="price">
-                </td>
-                <td class="presenters">
-                    <p><a></a></p>
-                </td>
-                <td class="series event">
-                    <p><a></a></p>
-                </td>
-            </tr>
-        </table>
+        <div class="screenings"></div>
     </div>
 </div>
