--- a/resources/public/html/presenters.html
+++ b/resources/public/html/presenters.html
@@ -1,57 +1,37 @@
-<div class="add presenter inner-form">
-  <form action="/presenters/add" method="post">
-    <div class="presenter">
-      <label for="name">Name:</label>
-      <input name="name"/>
-      <label for="name">Website:</label>
-      <input name="website"/>
-      <label>Description:</label>
-      <textarea name="description"></textarea>
-    </div>
+<div class="all">
+    <ul>
+        <li><a></a></li>
+    </ul>
+</div>
 
-    <div class="button">
-      <button type="submit" class="add-presenter">Add Presenters</button>
-    </div>
-    <span class="remove">Cancel</span>
-  </form>
+<div class="add presenter inner-form">
+    <form action="/presenters/add" method="post">
+        <div class="presenter">
+            <label for="name">Name:</label>
+            <input class="name" name="name"/>
+            <label for="name">Website:</label>
+            <input class="website" name="website"/>
+            <label>Description:</label>
+            <textarea class="description" name="description"></textarea>
+        </div>
+
+        <div class="button">
+            <button type="submit" class="add-presenter">Add Presenters</button>
+        </div>
+        <a class="delete">Delete</a>
+        <span class="remove">Cancel</span>
+    </form>
 </div>
 
 <div class="view">
-  <div class="presenter-details grid-50">
-    <h2 class="name"></h2>
-    <p class="website"></p>
-    <p class="description"></p>
-  </div>
+    <div class="presenter-details grid-50">
+        <h2 class="name"></h2>
+        <p class="website"></p>
+        <p class="description"></p>
+    </div>
 
-  <div class="meta details grid-50">
-    <h2>Upcoming Screenings</h2>
-    <table>
-      <tr>
-        <th>Movie(s)</th>
-        <th>Date(s)</th>
-        <th>Price</th>
-        <th>Presenter</th>
-        <th>Program</th>
-      </tr>
-      <tr class="screening">
-        <td class="screening">
-          <p class="screening">
-            <a class="screening" href="">
-              <span class="movie"></span>
-            </a>
-          </p>
-        </td>
-        <td class="showtimes"><p></p>
-        </td>
-        <td class="price">
-        </td>
-        <td class="presenters">
-          <br/>
-        </td>
-        <td class="series event">
-          <br/>
-        </td>
-      </tr>
-    </table>
-  </div>
+    <div class="meta details grid-50">
+        <h2>Upcoming Screenings</h2>
+        <div class="screenings"></div>
+    </div>
 </div>
