--- a/resources/public/html/series.html
+++ b/resources/public/html/series.html
@@ -20,6 +20,7 @@
         <div class="button">
             <button type="submit" class="add-series">Add Series</button>
         </div>
+        <a href="delete"></a>
         <span class="remove">Cancel</span>
     </form>
 </div>
