Whole system CRUD-complete

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -1,4 +1,4 @@
-  <div class="view">
+<div class="view">
     <div class="movie-details grid-50">
         <h2><span class="title"></span></h2>
         <section class="movie">
@@ -155,6 +155,7 @@
         <div class="button">
             <button type="submit">Add Screening</button>
         </div>
+        <a class="delete">Delete</a>
     </form>
 
 </div>
