--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Midnight Movies Minneapolis</title>
-    <link rel="stylesheet" href="/stylesheets/normalize.css">
-    <link rel="stylesheet" href="/stylesheets/mmm.css">
-    <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
-    <link rel="icon"
-      type="image/png"
-      href="public/favicon.png">
-  </head>
-  <body>
-    <div  class="grid-container">
-      <header>
-        <h1>Midnight Movies Minneapolis</h1>
-      </header>
+    <head>
+        <meta charset="utf-8">
+        <title>Midnight Movies Minneapolis</title>
+        <link rel="stylesheet" href="/stylesheets/normalize.css">
+        <link rel="stylesheet" href="/stylesheets/mmm.css">
+        <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
+        <link rel="icon"
+              type="image/png"
+              href="public/favicon.png">
+    </head>
+    <body>
+        <div  class="grid-container">
+            <header>
+                <h1>Midnight Movies Minneapolis</h1>
+            </header>
 
-      <nav class="grid-100">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/screenings/">All Screenings</a></li>
-      </nav>
+            <nav class="grid-100">
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/screenings/">All Screenings</a></li>
+            </nav>
 
-      <main>
-      </main>
-
-
-
-      <footer>
-        <p>© 2013 [Chris] Dale</p>
-          <a href="/admin">admin</p>
-      </footer>
-    </div>
+            <main>
+            </main>
 
 
-    <script type="text/javascript" src="/scripts/main.js"></script>
-  </body>
+
+            <footer>
+                <p>© 2013 [Chris] Dale</p>
+                <a href="/admin">admin</p>
+                <a class="issue" href="https://gitreports.com/issue/CaptainLexington/mmm">Bugs? Suggestions?</a>
+            </footer>
+        </div>
+
+
+        <script type="text/javascript" src="/scripts/main.js"></script>
+    </body>
 </html>
