Presenters, series, and notes

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -12,6 +12,9 @@
     </div>
 
     <div class="meta details grid-50">
+        <p class="presenter">Presented by <a class="presenter"></a></p>
+        <p class="notes"></p>
+        <p class="series">This screening is a part of <a class="series"></a></p>
         <h2>Showtimes</h2>
         <div class="datetime">
             <h3></h3>
@@ -20,10 +23,6 @@
         <h2 class="venue"></h2>
         <p class="price"></p>
         <p class="address"></p>
-
-        <h2></h2>
-
-
     </div>
 </div>
 
