Link to venue from screening

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -20,7 +20,7 @@
             <h3></h3>
             <p></p>
         </div>
-        <h2 class="venue"></h2>
+        <h2 class="venue"><a class="venue"></a></h2>
         <p class="price"></p>
         <p class="address"></p>
     </div>
