Better link underlines

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -40,9 +40,8 @@
         </tr>
         <tr class="screening">
             <td class="screening">
-                <p class="screening">
-                    <a class="screening" href="">
-                        <span class="movie"></span>
+                <p class="movie">
+                    <a class="movie" href="">
                     </a>
                 </p>
             </td>
