Website links made concise

--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -6,7 +6,7 @@
       <ul class="poster-list">
         <li class="screening">
           <h3 class="venue"></h3>
-          <a href="">
+          <a class="poster" href="">
             <img class="poster main_page" />
             <span class="datetime"></span>
           </a>
