--- a/resources/public/html/presenters.html
+++ b/resources/public/html/presenters.html
@@ -26,7 +26,7 @@
 <div class="view">
     <div class="presenter-details grid-35">
         <h2 class="name"></h2>
-        <p class="website"></p>
+        <p class="website"><a></a></p>
         <p class="description"></p>
     </div>
 
