--- a/resources/public/html/series.html
+++ b/resources/public/html/series.html
@@ -28,7 +28,7 @@
 <div class="view">
     <div class="series-details grid-35">
         <h2 class="name"></h2>
-        <p class="website"></p>
+        <p class="website"><a></a></p>
         <p class="description"></p>
     </div>
 
