--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -31,7 +31,7 @@
 <div class="view">
     <div class="venue-details grid-35">
         <h2 class="name"></h2>
-        <p class="website"></p>
+        <p class="website"><a></a></p>
         <p class="phone-number"></p>
         <p class="description"></p>
         <p class="address"> </p>
