Fixed the munging and some other issues I can't recall!

--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -1,6 +1,6 @@
 
 <div class="index">
-  <div class="movies-main grid-55">
+  <div class="movies-main grid-100">
     <div class="week-container">
       <h2 class="list-label">LOREM IPSUM</h2>
       <ul class="poster-list">
@@ -16,17 +16,20 @@
   </div>
 
 
-  <div class="meta main grid-40 prefix-5">
+  <!-- <div class="meta main grid-40 prefix-5">
     <a class="twitter-timeline" href="https://twitter.com/MidniteMoviesTC" data-widget-id="365201604443521024">Tweets by @MidniteMoviesTC</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-  </div>
+  </div> -->
 </div>
 
 
 <div class="about">
    <article>
-      <h2>Hello and welcome!</h2>
-      <p>About three years ago, I discovered midnight movies. It started at the Heights Theater in Columbia Heights, seeing classic British Noir films in the oldest continuously-operating theater in the Twin Cities. Then the now-abandoned Movie Hole at the Proud St Anthony Main, and finally the Uptown.</p>
+      <h2>Welcome to Midnight Movies Minneapolis!</h2>
+      <p>Hello! I'm Dale. I love movies. I love seeing movies in theaters, and I <em>especially</em> love seeing movies in independent theaters right here in the Twin Cities. I made Midnight Movies Minneapolis so I could share that love. The Twin Cities pride themselves on their artistic culture - from the Walker Art Center to the Orpheum, from Art-a-Whirl to the Fringe Festival, the Twin Cities has a vibrant community of artists and art-lovers.</p>
+       <p>But all too often the medium of film gets the short stick. I've been to too many movies where my friends and I were the only ones in attendence. The experience of seeing a film in a theater can never be replicated in your home. Even with a top-of-the-line entertainment system, nothing can replace the sense of ritual or community that making an event out of a screening can provide.</p>
+       <p>Midnight Movies Minneapolis is here to make it as easy as possible for you to see a classic movie in one of our fair cities' independent theaters. Right now it's just an index of showtimes, but as it grows I hope it becomes a community unto itself.</p>
+       <p>If you have any suggestions, feel free to <a href="mailto:dale@midnightmoviesmpls.com">send me an email</a> or hit me up on <a href="http://twitter.com/MidniteMoviesTC">Twitter</a> or <a href="https://www.facebook.com/midnightmoviesmpls">Facebook</a></p>
     </article>
 </div>
