--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
         <link rel="icon"
               type="image/png"
-              href="public/favicon.png">
+              href="/favicon.png">
     </head>
     <body>
         <div  class="grid-container">
