--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -9,7 +9,7 @@
             <p class="runningTime"> minutes</p>
             <p class="description"></p>
         </section>
-        <p>Movie posters and descriptions adapted from The Wikipedia.</p>
+        <p class="attrib">Movie posters and descriptions adapted from Wikipedia where appropriate.</p>
     </div>
 
     <div class="meta details grid-50">
