Short names for venues

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -146,7 +146,7 @@
             <label for="price">Price:</label>
             <input class="price" name="price"/>
             <label for="notes">Notes: (optional)</label>
-            <textarea class="notes" name="notes"></textarea>
+            <textarea class="notes" $name="notes"></textarea>
             <label for="title">Title: (optional)</label>
             <input class="title" name="title"/>
         </div>
