--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -1,4 +1,4 @@
-<div class="all">
+$<div class="all">
     <ul>
         <li><a></a></li>
     </ul>
@@ -10,6 +10,8 @@
         <div class="venue">
             <label for="name">Name:</label>
             <input class="name" name="name"/>
+            <label for="short-name">Short Name:</label>
+            <input class="short-name" name="short-name"/>
             <label for="name">Address:</label>
             <input class="address" name="address"/>
             <label for="name">Website:</label>
