Buy tickets link on screening page!

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -23,6 +23,7 @@
         </div>
         <h2 class="venue"><a class="venue"></a></h2>
         <p class="price"></p>
+        <p class="tickets"><a href="">Buy Tickets</a></p>
         <p class="address"></p>
     </div>
 </div>
@@ -145,6 +146,8 @@
         <div class="screening-data">
             <label for="price">Price:</label>
             <input class="price" name="price"/>
+            <label for="tickets">Buy Tickets:</label>
+            <input class="tickets" name="tickets"/>
             <label for="notes">Notes: (optional)</label>
             <textarea class="notes" $name="notes"></textarea>
             <label for="title">Title: (optional)</label>
