--- a/resources/public/html/presenters.html
+++ b/resources/public/html/presenters.html
@@ -7,10 +7,12 @@
 <div class="add presenter inner-form">
     <form action="/presenters/add" method="post">
         <div class="presenter">
-            <label for="name">Name:</label>
+            <label>Name:</label>
             <input class="name" name="name"/>
-            <label for="name">Website:</label>
+            <label>Website:</label>
             <input class="website" name="website"/>
+            <label>Twitter Handle:</label>
+            <input class="twitter-handle" name="twitter-handle"/>
             <label>Description:</label>
             <textarea class="description" name="description"></textarea>
         </div>
