--- a/resources/public/html/venues.html
+++ b/resources/public/html/venues.html
@@ -18,6 +18,8 @@ $<div class="all">
             <input class="website" name="website"/>
             <label for="name">Phone Number:</label>
             <input class="phone-number" name="phone-number"/>
+            <label for="name">Twitter Handle:</label>
+            <input class="twitter-handle" name="twitter-handle"/>
             <label>Description:</label>
             <textarea class="description" name="description"></textarea>
         </div>
