Tweet range fixed

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -71,7 +71,7 @@
 </div>
 
 <div class="select-snippet">
-    <div class="singleItem film">
+    <div class="singleItem">
         <select class="" name="">
             <option value="" class=""></option>
         </select>
@@ -148,8 +148,12 @@
             <input class="price" name="price"/>
             <label for="tickets">Buy Tickets:</label>
             <input class="tickets" name="tickets"/>
+            <label for="tweet-text">Tweet Text:</label>
+            <button class="tweet-text generate">Generate Tweet Text</button>
+            <p class="tweet-text length"></p>
+            <textarea class="tweet-text" name="tweet-text"></textarea>
             <label for="notes">Notes: (optional)</label>
-            <textarea class="notes" $name="notes"></textarea>
+            <textarea class="notes" name="notes"></textarea>
             <label for="title">Title: (optional)</label>
             <input class="title" name="title"/>
         </div>
