Social Media buttons

--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -14,6 +14,35 @@
         <div  class="grid-container">
             <header>
                 <h1>Midnight Movies Minneapolis</h1>
+                <!-- Begin MailChimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+                <style type="text/css">
+                    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                </style>
+
+                <ul class="social-media">
+                    <li>
+                        <a href="https://www.facebook.com/midnightmoviesmpls">
+                            <img src="/facebook.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/MidniteMoviesTC">
+                            <img src="/twitter.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://eepurl.com/bkOPiD">
+                            <img src="/email.png">
+                        </a>
+                    </li>
+                </ul>
+
+                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
+
             </header>
 
             <nav class="grid-100">
