New verbose autotweets!

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -149,7 +149,7 @@
             <label for="tickets">Buy Tickets:</label>
             <input class="tickets" name="tickets"/>
             <label for="tweet-text">Tweet Text:</label>
-            <button class="tweet-text generate">Generate Tweet Text</button>
+            <button class="tweet-text generate" type="button">Generate Tweet Text</button>
             <p class="tweet-text length"></p>
             <textarea class="tweet-text" name="tweet-text"></textarea>
             <label for="notes">Notes: (optional)</label>
@@ -159,7 +159,7 @@
         </div>
 
         <div class="button">
-            <button type="submit">Add Screening</button>
+            <button class="submit" type="submit">Add Screening</button>
         </div>
         <a class="delete">Delete</a>
     </form>
