placeholder text for dates

--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -138,7 +138,7 @@
             <label for="name">Showtimes:</label>
             <span class="duplicate">Add Showtime</span>
             <div class="showtimes singleItem">
-                <input name="showtime"/>
+                <input name="showtime" placeholder="YYYY.MM.DD HH:MM AM/PM">
                 <span class="remove">-</span>
             </div>
         </div>
