New autocomplete movies

--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -5,7 +5,8 @@
         <title>Midnight Movies Minneapolis</title>
         <link rel="stylesheet" href="/stylesheets/normalize.css">
         <link rel="stylesheet" href="/stylesheets/mmm.css">
-        <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/ui-lightness/jquery-ui.css">
+	<link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
         <link rel="icon"
               type="image/png"
               href="/favicon.png">
