--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -87,6 +87,11 @@
             <span class="add movie">Add Movie to Database</span>
             <br/>
             <span class="duplicate">Add Movie to Screening</span>
+	    <div class="mac-container">
+		<input class="movie-autocomplete">
+		<input type='hidden' class="movie_id" name="movie_id">
+                <span class="remove">-</span>
+	    </div>
             <div class="film selectsContainer">
                 <div class="prior-films">
                 </div>
